--- a/2 curs/2_half/OOP/OOP_lab1/mainwindow.ui
+++ b/2 curs/2_half/OOP/OOP_lab1/mainwindow.ui
@@ -44,7 +44,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>+</string>
+     <string>%</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_3">
