--- a/2 curs/2_half/OOP/OOP_lab1/mainwindow.ui
+++ b/2 curs/2_half/OOP/OOP_lab1/mainwindow.ui
@@ -33,6 +33,9 @@
       <height>41</height>
      </rect>
     </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::DefaultContextMenu</enum>
+    </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
@@ -48,6 +51,9 @@
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_3">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>370</x>
